basesink: Switch enable_last_buffer to an atomic int

Avoids having to take a lock to read/write it.

https://bugzilla.gnome.org/show_bug.cgi?id=632778